# obrolan-bot-client

./: .dockerignore  .env.example  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: build.yml
app/: main.py
app/core/: config.py  exceptions.py  loggers.py  utils.py
app/datamodel/: chat.py  faq.py  feedback.py  response.py
app/services/: base.py  chatbot.py  faq.py
