[tool.poetry]
name = "obrolan-bot-client"
version = "0.1.0"
description = "Obrolan App"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
python-json-logger = "~2.0.7"
gradio = "~5.15.0"
pydantic-settings = "~2.7.1"
pydantic = "~2.10.6"
python-multipart = ">=0.0.19,<0.1.0"
aiohttp = ">=3.11.4,<3.12.0"

[tool.poetry.group.dev.dependencies]
pylint = "^3.3.1"
black = "^24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
